--- a/public/static-page.html
+++ b/public/static-page.html
@@ -9,7 +9,6 @@
 </head>
 <body>
   <h1>This is a static page</h1>
-  <img src="/public/images/957A6857.jpg"
-  width="200px"> <!--set the path to YOUR image file-->
+  <img src="/desktop/web2-final-project/public/images/clouds.jpeg" alt="Sample Image">
 </body>
 </html>
